// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render custom component 1`] = `
<a
  title="Title"
>
  X
</a>
`;

exports[`Render should render custom element 1`] = `
<h1>
  Headline
</h1>
`;

exports[`Render should render custom element 2`] = `
<h1>
  Headline
</h1>
`;

exports[`Render should render just a text without wrapping element 1`] = `"Just a text"`;

exports[`Render should render just a text without wrapping element 2`] = `"Just a text"`;

exports[`Render should render just a text without wrapping element 3`] = `"Just a text"`;

exports[`Render should render with fallback span wrapping element 1`] = `
<span>
  Just a text
</span>
`;

exports[`Render should render with fallback span wrapping element 2`] = `
<span
  className="info"
>
  Just a text
</span>
`;

exports[`Render should take default render element from context 1`] = `
<h1>
  Just a text
</h1>
`;
